@@ -17,13 +17,16 @@
     <properties>
         <jersey.version>2.28</jersey.version>
         <jackson.version>2.9.8</jackson.version>
-        <javax.servlet-api.version>4.0.0</javax.servlet-api.version>
         <org.eclipselink.version>2.7.4</org.eclipselink.version>
-        <commons.cli>1.4</commons.cli>
         <shiro.version>1.4.1</shiro.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.elcer.account</groupId>
+            <artifactId>cache</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- jersey container -->
         <dependency>
@@ -37,9 +40,9 @@
             <version>1.4.1</version>
         </dependency>
         <!-- jersey container -->
-        <!-- jersey -->
 
 
+        <!-- jersey server-->
         <dependency>
             <groupId>org.glassfish.jersey.test-framework</groupId>
             <artifactId>jersey-test-framework-core</artifactId>
@@ -58,45 +61,6 @@
         <finalName>app-${project.version}</finalName>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <id>validate</id>
-                        <phase>validate</phase>
-                        <configuration>
-                            <configLocation>../checkstyle/checkstyle.xml</configLocation>
-                            <encoding>UTF-8</encoding>
-                            <consoleOutput>true</consoleOutput>
-                            <failsOnError>true</failsOnError>
-                        </configuration>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
-                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-                <version>3.0.0-M3</version>
-            </plugin>
-
-
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-war-plugin</artifactId>-->
-<!--                <version>3.2.3</version>-->
-<!--            </plugin>-->
-
-            <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.4.19.v20190610</version>
@@ -105,25 +69,6 @@
                         <port>8082</port>
                     </httpConnector>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>add-groovy-test-source</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>add-test-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${basedir}/src/test/groovy</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
